@@ -81,13 +81,13 @@ class ProjectionClauseTest extends CypherFunSuite with AstConstructionTestSuppor
     result.state.symbol("X") shouldNot be(empty)
   }
 
-  test("test order by scoping & shadowing") {
-    // GIVEN MATCH n WITH n.prop AS n ORDER BY n + 2
+  test("test order by scoping 2") {
+    // GIVEN MATCH n WITH n.prop AS introducedIdentifier ORDER BY introducedIdentifier + 2
     val orderBy: OrderBy = OrderBy(Seq(
-      AscSortItem(Add(ident("n"), SignedDecimalIntegerLiteral("2")_)_)_
+      AscSortItem(Add(ident("introducedIdentifier"), SignedDecimalIntegerLiteral("2")_)_)_
     ))_
 
-    val returnItem = AliasedReturnItem(Property(ident("n"), PropertyKeyName("prop")_)_, ident("n"))_
+    val returnItem = AliasedReturnItem(Property(ident("n"), PropertyKeyName("prop")_)_, ident("introducedIdentifier"))_
     val listedReturnItems = ReturnItems(includeExisting = false, Seq(returnItem))_
     val withObj = With(distinct = false, listedReturnItems, Some(orderBy), None, None, None)_
 
@@ -98,7 +98,7 @@ class ProjectionClauseTest extends CypherFunSuite with AstConstructionTestSuppor
 
     // THEN the n identifier should be an integer
     result.errors shouldBe empty
-    result.state.symbol("n") shouldNot be(empty)
+    result.state.symbol("introducedIdentifier") shouldNot be(empty)
   }
 
   test("test order by scoping & shadowing 2") {
@@ -165,5 +165,26 @@ class ProjectionClauseTest extends CypherFunSuite with AstConstructionTestSuppor
 
     // THEN
     result.errors shouldNot be(empty)
+  }
+
+  test("order by a property that isn't projected") {
+    // GIVEN MATCH n WITH n.prop as x ORDER BY n.bar
+    val orderBy: OrderBy = OrderBy(Seq(
+      AscSortItem(Property(ident("n"), PropertyKeyName("bar")_)_)_
+    ))_
+
+    val returnItems: Seq[AliasedReturnItem] = Seq(
+      AliasedReturnItem(Property(ident("n"), PropertyKeyName("prop")_)_, ident("x"))_
+    )
+    val listedReturnItems = ReturnItems(includeExisting = false, returnItems)_
+    val withObj = With(distinct = false, listedReturnItems, Some(orderBy), None, None, None)_
+
+    // WHEN
+    val beforeState = SemanticState.clean.newChildScope.declareIdentifier(ident("n"), CTNode).right.get
+    val middleState = withObj.semanticCheck(beforeState).state
+    val result = withObj.semanticCheckContinuation(middleState.currentScope.scope)(middleState.newSiblingScope)
+
+    // THEN
+    result.errors should be(empty)
   }
 }
